src/css/login.css
@import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap');

html {
  --primary-color: #1c1c1c;
  --primary-color-1: rgba(43, 43, 43, 0.5);
  --secondary-color: #ffffff;

  /* for rem value */
  font-size: 62.5%;

  height: 100vh;
}

@media screen and (max-width: 800px) {
  html {
    font-size: 50%;
  }
}

@media screen and (max-width: 500px) {
  html {
    font-size: 35%;
  }
}

html,
button {
  font-family: 'Open Sans', sans-serif;
  line-height: 20px;
}

body {
  color: var(--primary-color);
  background-color: var(--secondary-color);
  font-size: 1rem;
  font-family: 'Hammersmith One';
  box-sizing: border-box;
}
.App {
  height: 100vh;
  width: 100vw;
}
.form-login {
  display: flex;
  flex-direction: column;
  margin: 10rem 15rem 0rem 20rem;
}

.navbar-login {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  margin: 2.5rem;
}
.logo img {
  height: 4rem;
  top: 1rem;
}

.App {
  display: flex;
  justify-content: space-between;
}
/*
.login-button{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 30rem;
    height: 3rem;
    font-size: 1.5rem;
    color: white;
    background: #1E1E1E;
    border-radius: 1.4rem;
    border: 1px solid white;
    margin-top: 0;
    filter: drop-shadow(0px 5px 0px rgba(0, 0, 0, 0.6));
    margin-bottom: 1.5rem;
}

.login-button:focus{
    transform: translateY(1px);
    filter: none;
}

.login-svg{
    height: 1.5rem;
    width: 1.8rem;
    display: flex;
    justify-content: center;
    margin-left: 0.5rem;
}

.login-animation{
    animation: loading 3s linear 0s infinite;
}
*/

/* Login Button Start */

.login-button-slide {
  background: var(--primary-color);
  color: var(--secondary-color);
  font-family: inherit;
  padding: 0.35em;
  padding-left: 2em;
  font-size: 17px;
  font-weight: 500;
  border-radius: 0.9em;
  border: none;
  letter-spacing: 0.05em;
  display: flex;
  align-items: center;
  justify-content: space-around;
  overflow: hidden;
  position: relative;
  height: 2.5em;
  padding-right: 2.15em;
}

.login-button-slide .iconbtn {
  background: var(--secondary-color);
  margin-left: 1em;
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 1.9em;
  width: 1.9em;
  border-radius: 0.7em;
  right: 0.3em;
  transition: all 0.3s;
  cursor: pointer;
}

.login-button-slide:hover .iconbtn {
  width: calc(100% - 0.6em);
}

.login-button-slide .iconbtn svg {
  width: 1.5em;
  transition: transform 0.3s;
  color: var(--primary-color);
}

.login-button-slide:hover .iconbtn svg path {
  fill: var(--primary-color);
}

.login-button-slide:hover .iconbtn svg {
  transform: translateX(0.1em);
}

.login-button-slide:active .iconbtn {
  transform: scale(0.95);
}

/* Login Button End */

.check-mark {
  height: 1.7rem;
  width: 2rem;
  display: none;
  transform: rotate(0.02turn);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.theme-toggle {
  display: flex;
  justify-content: center;
  align-items: center;
  filter: drop-shadow(0px 5px 0px #00ffff);
  transition: filter 0.3s cubic-bezier(0, 0.74, 0.58, 1),
    margin 0.3s cubic-bezier(0.45, 0.01, 0.58, 1);
  margin-left: 34rem;
}

.theme-toggle:hover {
  filter: none;
  transform: translateY(1px);
}

label {
  display: flex;
  width: 8rem;
  height: 3rem;
  justify-content: space-between;
  align-items: center;
  padding: 0px 8px;
  border-radius: 5rem;
  cursor: pointer;
  position: relative;
  border: inset 1px solid var(--secondary-color);
  background-image: url('../images/day.png');
  background-size: cover;
}

label i {
  font-size: 1.8rem;
}
label .fa-sun {
  transition: 0.8s;
  padding-top: 0.5rem;
}
label .fa-moon {
  color: var(--secondary-color);
  transition: 0.8s;
  padding-top: 0.5rem;
}
label .fa-moon svg {
  height: 2.6rem;
  width: 2.6rem;
}
label .fa-sun svg {
  height: 2.6rem;
  width: 2.6rem;
}
label .fa-moon svg > * {
  fill: white;
  stroke: white;
}
label .fa-sun svg > * {
  fill: #ffc187;
  stroke: #ffc187;
}
label .ball {
  display: none;
}

label .fa-sun {
  opacity: 1;
}

input:checked + label .fa-sun {
  opacity: 0;
}

label .fa-moon {
  opacity: 0;
}
input:checked + label .fa-moon {
  opacity: 1;
}

input:checked + label .fa-sun {
  transform: translateX(40px);
}
input:checked + label .fa-moon {
  transform: translateX(40px);
}

#switch {
  display: none;
}

label .fa-moon {
  transform: translateX(-43px);
}
input:checked + label .fa-moon {
  transform: translateX(0);
}

.welcome-back {
  font-size: 4.8rem;
  font-weight: 400;
  margin-bottom: 3rem;
  word-spacing: 5px;
  letter-spacing: 2px;
}
.login-credentials-heading {
  color: var(--primary-color-1);
  font-weight: 400;
  font-size: 1.8rem;
  font-family: sans-serif;
  /* word-spacing: 2px;  */
  letter-spacing: 1px;
}

.input {
  border-radius: 1rem;
  height: 4rem;
  /* width: 30rem; */
  color: var(--primary-color-1);
  text-align: start;
  border: 2px solid var(--primary-color-1);
  padding: 5px;
  font-size: 1.4rem;
  font-weight: 200;
}
.input-2 {
  padding-top: 1.2rem;
}
.email-address,
.password {
  margin-top: 2.5rem;
  font-weight: 500;
  font-size: 1.6rem;
}
.login-checkbox {
  margin: 1rem 0rem 1rem 0rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.remember-checkbox {
  margin-right: 0.5rem;
  margin-bottom: 0.5rem;
}
.remember-me {
  padding: 5px;
  font-size: 1.6rem;
  font-weight: 500;
  display: flex;
  align-items: baseline;
}
.forgot-password {
  font-size: 1.6rem;
  font-weight: 500;
}
.forgot-password:hover {
  cursor: pointer;
  text-decoration: underline;
}
.contact-us {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 1.8rem;
  text-align: center;
  color: rgba(128, 128, 128);
  font-size: 1.5rem;
  font-weight: 400;
}
.contact-us a {
  text-decoration: none;
  color: rgba(128, 128, 128);
  font-weight: 600;
}
.contact-us:hover a {
  color: var(--primary-color);
  text-decoration: underline;
}

.user-img {
  margin: 2.5rem;
}
.footer-login {
  font-size: 1.6rem;
  font-weight: lighter;
  margin: 3.5rem 0rem 1rem 1rem;
  margin-left: 3rem;
  width: 35rem;
}
/* Animation */
@keyframes loading {
  0% {
    transform: rotate(0turn);
  }
  25% {
    transform: rotate(0.25turn);
  }
  50% {
    transform: rotate(0.5turn);
  }
  75% {
    transform: rotate(0.75turn);
  }
  100% {
    transform: rotate(1turn);
  }
}
.inactive {
  display: none;
}
.login-error {
  text-align: center;
  text-decoration: underline;
  font-size: 1.2rem;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  color: rgba(255, 0, 0, 80%);
  animation: fadeIn 1.5s;
}
@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
#theme-label {
  background-size: cover;
}

